--- a/fetch/peticiones asincronas/index.html
+++ b/fetch/peticiones asincronas/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     
-
+    <div class="personajes">
+        <p class="loader">cargando..</p>
+    </div>
     <script src="mainscript.js"></script>
 </body>
 </html>
