ordenando API de mayor a menor y consumiendo promesas anidadas

--- a/fetch/peticiones asincronas/pratica/index.html
+++ b/fetch/peticiones asincronas/pratica/index.html
@@ -4,19 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Api products</title>
+    <style>
+        .image__product{
+            max-width: 300px;
+            object-fit: contain;
+        }
+    </style>
 </head>
 <body>
     <div class="list__products">
-        <p class="loader">cargando...</p>
-    </div>
-
-    <div class="product">
-        <p class="loader__product">cargando...</p>
-    </div>
-
-    <div class="categories">
-        <p class="loader__categories"></p>
+        <p class="loader">cargando..</p>
     </div>
 
     <script src="mainscript.js"></script>
