Se aprenden clases y funciones con TS

--- a/TypeScript_y_POO/typescript/index.html
+++ b/TypeScript_y_POO/typescript/index.html
@@ -9,6 +9,10 @@
 <body>
     
 
-    <script src="tipos-de-datos.js"></script>
+    <div class="carro">
+        
+    </div>
+
+    <script src="camiseta.js"></script>
 </body>
 </html>
