Se aprende a usar interfaces, constructores y herencias en TypeScript

--- a/TypeScript_y_POO/typescript/index.html
+++ b/TypeScript_y_POO/typescript/index.html
@@ -13,6 +13,8 @@
         
     </div>
 
-    <script src="camiseta.js"></script>
+    <!-- <script src="camiseta.js"></script> -->
+    <!-- <script src="components/constructores.js"></script> -->
+    <script src="components/practica-todo.js"></script>
 </body>
 </html>
