se aprende a usar decoradores

--- a/TypeScript_y_POO/typescript/index.html
+++ b/TypeScript_y_POO/typescript/index.html
@@ -15,6 +15,6 @@
 
     <!-- <script src="camiseta.js"></script> -->
     <!-- <script src="components/constructores.js"></script> -->
-    <script src="components/practica-todo.js"></script>
+    <!-- <script src="components/practica-todo.js"></script> -->
 </body>
 </html>
